`Feature: Update folder structure and project documentation`
`Summary`

Updated the project folder structure and documentation files, reorganized models, and implemented core changes in project structure.

`Description`

This commit introduces a reorganization of the folder structure to better reflect the core components of the poker library, moving from `utils/` to `models/`. Additionally, it adds new documentation files and updates existing files to ensure alignment with the updated project structure. Changes include:
- Moved `Card` and `Deck` classes from `/src/utils/` to `/src/models/` for better clarity in the project's domain model.
- Updated `PROJECT_STRUCTURE.md` to reflect the new layout.
- Modified and added necessary documentation files (`CHANGELOG.md`, `CONTRIBUTING.md`, `DEVELOPMENT_GUIDE.md`, etc.).
- Cleaned up unused documentation assets and reorganized them under `/docs/site/`.

`Type`

- Feature: A new feature or enhancement added to the project.

`Impact`

The folder structure changes improve the clarity and modularity of the project, ensuring core models are placed under the correct directory. Documentation updates reflect these changes for future developers to easily navigate and understand the structure.

`Related Issues`

None.

`Dependencies`

No new dependencies introduced.

`Testing`

The changes were manually tested by verifying the new folder structure and ensuring the documentation generated by Typedoc is correctly aligned with the new structure.

`Notes`

- This change is a breaking structure update, meaning that any references to the old `utils/` directory for core models will need to be updated to the new `models/` directory.
- Further updates may be needed as additional models are added.

`Commit Checklist`:

- [x] The commit message follows the established format and guidelines.
- [x] The changes introduced by the commit have been thoroughly reviewed and tested.
- [x] Documentation has been updated to reflect the changes introduced 

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "docify": "typedoc --entryPointStrategy expand src --out docs",
+    "docify": "typedoc --entryPointStrategy expand src --out docs/site",
     "start": "node dist/index.js"
   },
   "repository": {
