--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A Poker Js Library.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
+  "type": "module",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json",
     "test": "jest",
     "docify": "typedoc --entryPointStrategy expand src --out docs/site",
     "start": "node dist/index.js",
@@ -16,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/astitvsingh/pokerjs.git"
+    "url": "git+https://github.com/astitvsingh/CasinoJs.git"
   },
   "keywords": [
     "pokerjs",
@@ -26,9 +27,9 @@
   "author": "Astitv Singh <https://github.com/astitvsingh>",
   "license": "SEE LICENSE IN LICENSE",
   "bugs": {
-    "url": "https://github.com/astitvsingh/pokerjs/issues"
+    "url": "https://github.com/astitvsingh/CasinoJs/issues"
   },
-  "homepage": "https://github.com/astitvsingh/pokerjs#readme",
+  "homepage": "https://github.com/astitvsingh/CasinoJs#readme",
   "devDependencies": {
     "@types/events": "^3.0.3",
     "@types/node": "^22.7.6",
