`Commit Message Title`
`Summary`
A brief one-line summary of the changes made in this commit.

`Description`
A detailed description of the changes introduced by this commit. Include information about why the changes were made, how they address specific issues or requirements, and any relevant context or considerations.

`Type`
Specify the type of change represented by this commit. Choose only one of the following options:

- Feature: A new feature or enhancement added to the project.
- Fix: A bug fix or resolution to an issue.
- Refactor: Code refactoring or restructuring without changing behavior.
- Documentation: Updates or additions to documentation files.
- Test: Additions or modifications to tests.
- Chore: Routine maintenance tasks, such as dependency updates or code cleanup.

`Impact`
Describe the impact of this change on the project. Consider factors such as functionality, performance, compatibility, and user experience.

`Related Issues`
List any related issues or tickets addressed by this commit. Use GitHub issue numbers or links to reference specific issues.

`Dependencies`
Specify any dependencies or requirements associated with this commit. Include information about libraries, frameworks, or other components affected by the changes.

`Testing`
Describe the testing approach or strategy used to validate this change. Include details about test cases, scenarios, or environments used for testing.

`Notes`
Add any additional notes, comments, or considerations relevant to this commit. This may include warnings, caveats, or follow-up tasks for future work.

`Commit Checklist`:

- [ ] The commit message follows the established format and guidelines.
- [ ] The changes introduced by the commit have been thoroughly reviewed and tested.
- [ ] Any related issues or tickets have been appropriately linked or referenced.
- [ ] Documentation has been updated to reflect the changes introduced by the commit.
- [ ] The commit does not introduce any new linting errors, warni

--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
   "homepage": "https://github.com/astitvsingh/CasinoJs#readme",
   "devDependencies": {
     "@types/events": "^3.0.3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.6",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typedoc": "^0.26.10",
     "typescript": "^5.6.3"
