--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json",
-    "test": "jest",
+    "test": "jest --coverage",
     "docify": "typedoc --entryPointStrategy expand src --out docs/site",
     "start": "node dist/index.js",
     "dev": "ts-node src/test.ts"
