`Commit Message Title`
`Summary`

`Summary`
A brief one-line summary of the changes made in this commit.

`Description`

`Description`
A detailed description of the changes introduced by this commit. Include information about why the changes were made, how they address specific issues or requirements, and any relevant context or considerations.

`Type`

`Type`
Specify the type of change represented by this commit. Choose only one of the following options:

- Feature: A new feature or enhancement added to the project.
- Fix: A bug fix or resolution to an issue.
- Refactor: Code refactoring or restructuring without changing behavior.
- Documentation: Updates or additions to documentation files.
- Test: Additions or modifications to tests.
- Chore: Routine maintenance tasks, such as dependency updates or code cleanup.

`Impact`

`Impact`
Describe the impact of this change on the project. Consider factors such as functionality, performance, compatibility, and user experience.

`Related Issues`

`Related Issues`
List any related issues or tickets addressed by this commit. Use GitHub issue numbers or links to reference specific issues.

`Dependencies`

`Dependencies`
Specify any dependencies or requirements associated with this commit. Include information about libraries, frameworks, or other components affected by the changes.

`Testing`

`Testing`
Describe the testing approach or strategy used to validate this change. Include details about test cases, scenarios, or environments used for testing.

`Notes`

`Notes`
Add any additional notes, comments, or considerations relevant to this commit. This may include warnings, caveats, or follow-up tasks for future work.

`Commit Checklist`

`Commit Checklist`:

- [ ] The commit message follows the established format and guidelines.
- [ ] The changes introduced by the commit have been thoroughly reviewed and tested.
- [ ] Any related issues or tickets have been appropriately linked or referenced.
- [ ] Documentation has been upda

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,5 @@
+/**@collapse */
+
 {
   "compilerOptions": {
     "module": "ESNext", // Tells TypeScript to use native ESModule syntax (import/export)
