--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "casinojs",
   "version": "0.1.0-alpha",
-  "description": "A Casino Js Library.",
+  "description": "A comprehensive JavaScript library for building and managing casino game functionalities, including poker seat management, event handling, and custom middleware.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "type": "module",
   "directories": {
     "doc": "docs"
   },
+  "exports": {
+    ".": {
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js",
+      "types": "./dist/esm/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json",
     "test": "jest --coverage",
-    "docify": "typedoc --entryPointStrategy expand src --out docs/site"
+    "docify": "typedoc --entryPointStrategy expand src --out docs/site",
+    "prepublishOnly": "npm run build && npm test && npm run docify",
+    "prepublish": "npm run build && npm test && npm run docify"
   },
   "repository": {
     "type": "git",
@@ -22,7 +32,11 @@
     "casino",
     "pokerjs",
     "poker",
-    "lib"
+    "casino library",
+    "game management",
+    "event handling",
+    "middleware",
+    "typescript"
   ],
   "author": "Astitv Singh <https://github.com/astitvsingh>",
   "license": "SEE LICENSE IN LICENSE",
