--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -4,6 +4,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "CommonJS",
+    "declaration": true,
     "outDir": "./dist/cjs"
   }
 }
