--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -4,6 +4,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "ESNext",
+    "declaration": true,
     "outDir": "./dist/esm"
   }
 }
